course materials update

--- a/materials/PyTutorial_03_Numerics.ipynb
+++ b/materials/PyTutorial_03_Numerics.ipynb
@@ -681,7 +681,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2.2.2 array indexing"
+    "#### 2.2.2 [array indexing](https://docs.scipy.org/doc/numpy/reference/arrays.indexing.html)"
    ]
   },
   {
@@ -880,7 +880,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from numpy.linalg import norm"
@@ -969,7 +971,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -1039,7 +1043,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d = {'Elements':['Hydrogen', 'Oxygen', 'Sulfur', 'Tungsten', 'Europium'],\\\n",
