course materials update

--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -7,7 +7,8 @@
     "# Python basics\n",
     "Author = R. Patrick Xian  \n",
     "Date = 08/2017\n",
-    "## 1. Assignment"
+    "## 1. The starting points\n",
+    "### 1.1 Assignment"
    ]
   },
   {
@@ -127,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Loops"
+    "### 1.2 Loops"
    ]
   },
   {
@@ -203,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Control flow"
+    "### 1.3 Control flow"
    ]
   },
   {
@@ -1676,7 +1677,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Standard library and beyond"
+    "## 4. Simple programs\n",
+    "### 4.1 Functional programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Object-oriented programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Standard library and beyond\n",
+    "### 5.1 sys, os, glob, glob2"
    ]
   },
   {
@@ -1695,13 +1766,6 @@
    "source": [
     "import sys\n",
     "print(sys.builtin_module_names)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 4.1 sys, os, glob, glob2"
    ]
   },
   {
@@ -1728,7 +1792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 itertools"
+    "### 5.2 itertools"
    ]
   },
   {
@@ -1744,7 +1808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 time"
+    "### 5.3 time"
    ]
   },
   {
@@ -1760,8 +1824,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. File I/O\n",
-    "### 5.1 Built-in method"
+    "## 6. File I/O\n",
+    "### 6.1 Built-in method"
    ]
   },
   {
@@ -1787,7 +1851,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 scipy.io | [doc](https://docs.scipy.org/doc/scipy/reference/tutorial/io.html)"
+    "### 6.2 scipy.io | [doc](https://docs.scipy.org/doc/scipy/reference/tutorial/io.html)"
    ]
   },
   {
@@ -1879,7 +1943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3 pandas"
+    "### 6.3 pandas"
    ]
   },
   {
@@ -1906,7 +1970,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.4 h5py"
+    "### 6.4 h5py"
    ]
   },
   {
