course materials update

--- a/materials/PyTutorial_03_Numerics.ipynb
+++ b/materials/PyTutorial_03_Numerics.ipynb
@@ -7,7 +7,7 @@
     "# Python numerics\n",
     "Author = R. Patrick Xian  \n",
     "Date = 08/2017\n",
-    "## 1. math"
+    "## 1. math -- built-in math"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. numpy"
+    "## 2. numpy -- numeric operations"
    ]
   },
   {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "       [19,  8, 10,  7]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "array([ 1,  9,  3, 12])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "9"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "array([[0, 5, 4, 2]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
        "array([ 9, 12, 19,  8, 10,  7])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "       [2, 3]], dtype=int64)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
        " array([1, 3, 0, 1, 2, 3], dtype=int64))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +844,7 @@
        "array([ 9, 12, 19,  8, 10,  7])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
        "5.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 array iterator"
+    "### 2.4 array iterator (numpy.nditer)\n",
+    "[Documentation](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.nditer.html#numpy.nditer) and [examples](https://docs.scipy.org/doc/numpy-1.13.0/reference/arrays.nditer.html)"
    ]
   },
   {
@@ -953,12 +954,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. scipy"
+    "## 3. scipy -- scientific computing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true,
     "scrolled": false
@@ -1026,12 +1027,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. pandas"
+    "## 4. pandas -- time series, tabular data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -1042,11 +1043,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Elements</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hydrogen</td>\n",
+       "      <td>111</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Oxygen</td>\n",
+       "      <td>222</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sulfur</td>\n",
+       "      <td>333</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tungsten</td>\n",
+       "      <td>444</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Europium</td>\n",
+       "      <td>555</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Elements  Weight  Z\n",
+       "0  Hydrogen     111  0\n",
+       "1    Oxygen     222  1\n",
+       "2    Sulfur     333  2\n",
+       "3  Tungsten     444  3\n",
+       "4  Europium     555  4"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d = {'Elements':['Hydrogen', 'Oxygen', 'Sulfur', 'Tungsten', 'Europium'],\\\n",
     "     'Z':[0,1,2,3,4],\\\n",
@@ -1059,7 +1120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1 Read from [table of elements](http://images-of-elements.com/element-properties.php)"
+    "### 4.1 read from [table of elements](http://images-of-elements.com/element-properties.php)"
    ]
   },
   {
@@ -1079,6 +1140,49 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 4.2 tabular operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3 method chaining"
+   ]
   },
   {
    "cell_type": "code",
@@ -1111,12 +1215,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. sympy"
+    "## 5. sympy -- symbolic computation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
