course materials update

--- a/materials/PyTutorial_04_Visualization.ipynb
+++ b/materials/PyTutorial_04_Visualization.ipynb
@@ -214,12 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 171,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "f, ax = plt.subplots(figsize=(8,6), facecolor='w')\n",
+    "f, axs = plt.subplots(1, 2, figsize=(16,8), facecolor='w')\n",
+    "ax, axcov = axs\n",
     "ax.set_facecolor('k')\n",
     "\n",
     "def fG(x, x0, sigma, A):\n",
@@ -227,27 +239,33 @@
     "    return A * np.exp(-((x-x0)/sigma)**2)\n",
     "\n",
     "# Draw ny lines with ng Gaussians each, on an x-axis with nx points\n",
-    "nx, ny, ng = 1000, 20, 4\n",
-    "x = np.linspace(0,1,1000)\n",
+    "nx, ny, ng = 1000, 60, 100\n",
+    "x = np.linspace(0,10,1000)\n",
     "\n",
     "y = np.zeros((ny, nx))\n",
     "for iy in range(ny):\n",
     "    for ig in range(ng):\n",
     "        # Select the amplitude and position of the Gaussians randomly\n",
-    "        x0 = np.random.random()\n",
-    "        A = np.random.random()*10\n",
-    "        sigma = 0.05\n",
+    "        x0 = 4*np.random.random() + 3\n",
+    "        A = np.random.random()*3\n",
+    "        sigma = 0.3\n",
     "        y[iy,:] += fG(x, x0, sigma, A)\n",
     "    # Offset each line by this amount: we want the first lines plotted\n",
     "    # at the top of the chart and to work our way down\n",
     "    offset = (ny-iy)*5\n",
     "    # Plot the line and fill under it: increase the z-order each time\n",
     "    # so that lower lines and their fills are plotted over higher ones\n",
-    "    ax.plot(x,y[iy]+offset, 'w', lw=2, zorder=(iy+1)*2)\n",
+    "    ax.plot(x,y[iy]+offset, 'w', lw=1, zorder=(iy+1)*2)\n",
     "    ax.fill_between(x, y[iy]+offset, offset, facecolor='k', lw=0, zorder=(iy+1)*2-1)\n",
-    "ax.margins(x=0.3, y=0.03)\n",
+    "ax.margins(x=0.3, y=0.2)\n",
     "ax.axes.get_xaxis().set_visible(False)\n",
-    "ax.axes.get_yaxis().set_visible(False)"
+    "ax.axes.get_yaxis().set_visible(False)\n",
+    "\n",
+    "jd = Image.open('..//files//JoyDivision_UnknownPleasures_1979.jpg')\n",
+    "axcov.imshow(jd)\n",
+    "axcov.axes.get_xaxis().set_visible(False)\n",
+    "axcov.axes.get_yaxis().set_visible(False)\n",
+    "plt.tight_layout()"
    ]
   },
   {
@@ -488,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -552,7 +572,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -581,7 +603,9 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b3d = Bloch3d()"
