course materials update

--- a/materials/PyTutorial_04_Visualization.ipynb
+++ b/materials/PyTutorial_04_Visualization.ipynb
@@ -106,6 +106,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def paramsearch(strlist, keystr, condition='startswith'):\n",
+    "    \n",
+    "    if condition == 'startswith':\n",
+    "        return [k for k in strlist if k.startswith(keystr + '.')]\n",
+    "    elif condition == 'endswith':\n",
+    "        return [k for k in strlist if k.endswith('.' + keystr)]\n",
+    "    elif condition == 'contain':\n",
+    "        return [k for k in strlist if keystr in k]\n",
+    "    else:\n",
+    "        raise ValueError('The specified search condition is not defined!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['font.size',\n",
+       " 'xtick.major.size',\n",
+       " 'xtick.minor.size',\n",
+       " 'ytick.major.size',\n",
+       " 'ytick.minor.size']"
+      ]
+     },
+     "execution_count": 243,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "paramsearch(mplparams, 'size', condition='endswith')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rcParams['font.size']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,7 +271,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### _Joy Division_ || Unknown Pleasures || 1979"
+    "### _Joy Division_ || Unknown Pleasures || 1979\n",
+    "A half-hearted attempt at an algorithmic reproduction of the classic album cover, read also [here](https://blogs.scientificamerican.com/sa-visual/pop-culture-pulsar-origin-story-of-joy-division-s-unknown-pleasures-album-cover-video/)"
    ]
   },
   {
@@ -225,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,12 +297,12 @@
     "ax, axcov = axs\n",
     "ax.set_facecolor('k')\n",
     "\n",
-    "def fG(x, x0, sigma, A):\n",
+    "def supergauss(x, x0, sigma, A):\n",
     "    \"\"\" A simple (un-normalized) Gaussian shape with amplitude A. \"\"\"\n",
-    "    return A * np.exp(-((x-x0)/sigma)**2)\n",
+    "    return A * np.exp(-((x-x0)/sigma)**4)\n",
     "\n",
     "# Draw ny lines with ng Gaussians each, on an x-axis with nx points\n",
-    "nx, ny, ng = 1000, 60, 100\n",
+    "nx, ny, ng = 1000, 60, 80\n",
     "x = np.linspace(0,10,1000)\n",
     "\n",
     "y = np.zeros((ny, nx))\n",
@@ -247,9 +310,9 @@
     "    for ig in range(ng):\n",
     "        # Select the amplitude and position of the Gaussians randomly\n",
     "        x0 = 4*np.random.random() + 3\n",
-    "        A = np.random.random()*3\n",
+    "        A = 0.9*np.random.lognormal()\n",
     "        sigma = 0.3\n",
-    "        y[iy,:] += fG(x, x0, sigma, A)\n",
+    "        y[iy,:] += supergauss(x, x0, sigma, A)\n",
     "    # Offset each line by this amount: we want the first lines plotted\n",
     "    # at the top of the chart and to work our way down\n",
     "    offset = (ny-iy)*5\n",
