--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Python basics\n",
     "Author = R. Patrick Xian  \n",
-    "Date = 08/2017\n",
+    "Date = 09/2017\n",
     "## 1. The starting points\n",
     "### 1.1 Assignment"
    ]
@@ -198,6 +198,29 @@
     "while i < 5:\n",
     "    print(time())\n",
     "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 2 + ... + 448 = 100128\n"
+     ]
+    }
+   ],
+   "source": [
+    "i, Summe = 0, 0\n",
+    "while True:\n",
+    "    Summe += i\n",
+    "    i += 1\n",
+    "    if Summe > 100000:\n",
+    "        break\n",
+    "print('1 + 2 + ... + {} = {}'.format(i, Summe))"
    ]
   },
   {
@@ -1550,17 +1573,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 map, filter"
+    "### 3.1 map, filter, lambda function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from math import sqrt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 2, 4, 6, 8, 10],\n",
+       " [0.0,\n",
+       "  1.4142135623730951,\n",
+       "  2.0,\n",
+       "  2.449489742783178,\n",
+       "  2.8284271247461903,\n",
+       "  3.1622776601683795])"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = list(range(0,11,2))\n",
+    "a, list(map(sqrt, a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 8, 64, 216, 512, 1000]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(lambda x:x**3, a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1571,34 +1643,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 138,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True)"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### 3.3 enumerate, zip"
+    "any([0,0,0,0]), any([0,1,0,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, True)"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all([1,1,1,0]), all([1,1,1,1])"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.4 iter, reversed"
+    "### 3.3 iter, reversed"
    ]
   },
   {
@@ -1677,36 +1764,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 3.4 enumerate, zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array index = 0, array entry = 4\n",
+      "array index = 1, array entry = 3\n",
+      "array index = 2, array entry = 2\n",
+      "array index = 3, array entry = 1\n",
+      "array index = 4, array entry = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ind, i in enumerate(reversed(range(5))):\n",
+    "    print('array index = {}, array entry = {}'.format(ind, i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array 1 entry = 10, array 2 entry = 0\n",
+      "array 1 entry = 11, array 2 entry = 1\n",
+      "array 1 entry = 12, array 2 entry = 2\n",
+      "array 1 entry = 13, array 2 entry = 3\n",
+      "array 1 entry = 14, array 2 entry = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in zip(range(10,18), range(5)):\n",
+    "    print('array 1 entry = {}, array 2 entry = {}'.format(i, j))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Simple programs\n",
     "### 4.1 Functional programming"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def fboring():\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.fboring>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fboring"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "fboring()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def listgen(start, end, inverted=False):\n",
+    "    pass"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1717,30 +1883,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 118,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.special import binom\n",
+    "import numpy as np\n",
+    "from numpy import pi, sqrt\n",
+    "\n",
+    "class Ellipse(object):\n",
+    "    \"\"\"A class for ellipses\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, majoraxis, minoraxis):\n",
+    "        if majoraxis < minoraxis:\n",
+    "            raise ValueError('Major axis is shorter than minor axis!')\n",
+    "        else:\n",
+    "            self.a = majoraxis\n",
+    "            self.b = minoraxis\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return(\"               {}:\\n\\\n",
+    "               a (major axis) = {}\\n\\\n",
+    "               b (minor axis) = {}\\n\\\n",
+    "               area = {}\\n\\\n",
+    "               circumference = {}\"\\\n",
+    "               .format(self.__class__.__name__,\\\n",
+    "               self.a, self.b, self.area, self.circumference()))\n",
+    "        \n",
+    "    @property\n",
+    "    def area(self):\n",
+    "        return 2*pi*self.a*self.b\n",
+    "    \n",
+    "    def circumference(self, n=5):\n",
+    "        h = ((self.a-self.b)**2)/((self.a+self.b)**2)\n",
+    "        hseries = [(binom(0.5,i)**2)*(h**i) for i in range(n)]\n",
+    "        cf = pi*(self.a+self.b)*np.sum(hseries)\n",
+    "        return cf\n",
+    "    \n",
+    "    def eccentricity(self):\n",
+    "        pass"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 3, 75.39822368615503, 22.1034921607095)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "el = Ellipse(majoraxis=4, minoraxis=3)\n",
+    "el.a, el.b, el.area, el.circumference(15)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               Ellipse:\n",
+      "               a (major axis) = 4\n",
+      "               b (minor axis) = 3\n",
+      "               area = 75.39822368615503\n",
+      "               circumference = 22.103492160650617\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(el)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Major axis is shorter than minor axis!",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-119-7195f4eab396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mEllipse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmajoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-118-b97134c71cb1>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, majoraxis, minoraxis)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmajoraxis\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Major axis is shorter than minor axis!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Major axis is shorter than minor axis!"
+     ]
+    }
+   ],
+   "source": [
+    "Ellipse(majoraxis=3, minoraxis=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'area', 'circumference', 'eccentricity']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(Ellipse))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1797,12 +2061,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import itertools as it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__doc__', '__loader__', '__name__', '__package__', '__spec__', '_grouper', '_tee', '_tee_dataobject', 'accumulate', 'chain', 'combinations', 'combinations_with_replacement', 'compress', 'count', 'cycle', 'dropwhile', 'filterfalse', 'groupby', 'islice', 'permutations', 'product', 'repeat', 'starmap', 'takewhile', 'tee', 'zip_longest']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(it))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1813,12 +2096,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from time import time, sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time = 0.1002662181854248 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "tstart = time()\n",
+    "sleep(0.1)\n",
+    "tstop = time()\n",
+    "print('Elapsed time = {} s'.format(tstop-tstart))"
+   ]
   },
   {
    "cell_type": "markdown",
