course materials update

--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -2326,6 +2326,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "issubclass(Circle, Ellipse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(__main__.Ellipse,)"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Circle.__bases__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
    "outputs": [
