--- a/materials/PyTutorial_02_Jupyter.ipynb
+++ b/materials/PyTutorial_02_Jupyter.ipynb
@@ -326,7 +326,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -388,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "denv = %env\n",
@@ -410,6 +414,7 @@
    ],
    "source": [
     "%%writefile addall.py\n",
+    "#! /usr/bin/env python\n",
     "\n",
     "def addalleven(arr):\n",
     "    evens = [n for n in arr if n % 2 == 0]\n",
