--- a/materials/PyTutorial_03_Numerics.ipynb
+++ b/materials/PyTutorial_03_Numerics.ipynb
@@ -1047,7 +1047,9 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A = np.random.random((10000, 100))\n",
@@ -1137,21 +1139,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0,   1,   4,   9],\n",
+       "       [ 16,  25,  36,  49],\n",
+       "       [ 64,  81, 100, 121]])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = (np.arange(12)**2).reshape(3,4)\n",
+    "A"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index = (0, 0), value = 0\n",
+      "index = (0, 1), value = 1\n",
+      "index = (0, 2), value = 4\n",
+      "index = (0, 3), value = 9\n",
+      "index = (1, 0), value = 16\n",
+      "index = (1, 1), value = 25\n",
+      "index = (1, 2), value = 36\n",
+      "index = (1, 3), value = 49\n",
+      "index = (2, 0), value = 64\n",
+      "index = (2, 1), value = 81\n",
+      "index = (2, 2), value = 100\n",
+      "index = (2, 3), value = 121\n"
+     ]
+    }
+   ],
+   "source": [
+    "it = np.nditer(A, flags=['multi_index'])\n",
+    "for val in it:\n",
+    "    print('index = {}, value = {}'.format(it.multi_index, val))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "index = 0, value = 0\n",
+      "index = 1, value = 1\n",
+      "index = 2, value = 4\n",
+      "index = 3, value = 9\n",
+      "index = 4, value = 16\n",
+      "index = 5, value = 25\n",
+      "index = 6, value = 36\n",
+      "index = 7, value = 49\n",
+      "index = 8, value = 64\n",
+      "index = 9, value = 81\n",
+      "index = 10, value = 100\n",
+      "index = 11, value = 121\n"
+     ]
+    }
+   ],
+   "source": [
+    "it = np.nditer(A, flags=['c_index'])\n",
+    "for val in it:\n",
+    "    print('index = {}, value = {}'.format(it.index, val))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "numpy.nditer can be slower than nested for loops if the ndarray dimension is equal to or less than 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1201,7 +1275,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 111,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from modular import findmodule"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1230,10 +1315,7 @@
     }
    ],
    "source": [
-    "import pkgutil\n",
-    "for _, modname, _ in pkgutil.iter_modules(sp.__path__):\n",
-    "    if not modname.startswith('_'):\n",
-    "        print(\"scipy.{}\".format(modname))"
+    "findmodule(sp)"
    ]
   },
   {
@@ -1301,12 +1383,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.optimize import rosen, rosen_der, least_squares, fmin_bfgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimization terminated successfully.\n",
+      "         Current function value: 0.000000\n",
+      "         Iterations: 11\n",
+      "         Function evaluations: 17\n",
+      "         Gradient evaluations: 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "x0 = np.array([1.1, 1.1, 1.1], dtype=np.double)\n",
+    "xopt, fopt, gopt, Bopt, func_calls, grad_calls, warnflag = \\\n",
+    "    fmin_bfgs(rosen, x0, fprime=rosen_der, maxiter=2000, full_output=True, retall=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "`gtol` termination condition is satisfied.\n",
+      "Function evaluations 5358, initial cost 2.9768e+00, final cost 1.2232e-11, first-order optimality 9.99e-09.\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = least_squares(rosen, x0, args=(), method='trf', verbose=1, max_nfev=1e5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " active_mask: array([ 0.,  0.,  0.])\n",
+       "        cost: 1.2232453040284042e-11\n",
+       "         fun: array([  4.94620118e-06])\n",
+       "        grad: array([ -1.21177462e-09,   9.98767609e-09,   7.61218444e-09])\n",
+       "         jac: array([[-0.00024499,  0.00201926,  0.001539  ]])\n",
+       "     message: '`gtol` termination condition is satisfied.'\n",
+       "        nfev: 5358\n",
+       "        njev: 5283\n",
+       "  optimality: 9.987676088305907e-09\n",
+       "      status: 1\n",
+       "     success: True\n",
+       "           x: array([ 1.00099107,  1.00198871,  1.00398906])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
+   ]
   },
   {
    "cell_type": "markdown",
