--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -2229,10 +2229,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 227,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Circle(Ellipse):\n",
@@ -2240,6 +2238,14 @@
     "    def __init__(self, radius):\n",
     "        super(Circle, self).__init__(majoraxis=radius, minoraxis=radius)\n",
     "        self.r = radius\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return(\"        {}:\\n\\\n",
+    "        r = {}\\n\\\n",
+    "        area = {}\\n\\\n",
+    "        circumference = {}\"\\\n",
+    "        .format(self.__class__.__name__,\\\n",
+    "        self.r, self.area, self.circumference))\n",
     "    \n",
     "    @property\n",
     "    def circumference(self):\n",
@@ -2248,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2263,7 @@
        "78.53981633974483"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2269,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2284,7 @@
        "78.53981633974483"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2289,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -2298,13 +2304,33 @@
        "31.41592653589793"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "circ.circumference"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Circle:\n",
+      "        r = 5\n",
+      "        area = 78.53981633974483\n",
+      "        circumference = 31.41592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(circ)"
    ]
   },
   {
@@ -3095,7 +3121,9 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_table('..//files//tableofelements.txt', sep='\\t', index_col=1).reset_index().drop('index', 1)"
@@ -3375,17 +3403,6 @@
    "outputs": [],
    "source": [
     "f.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 206,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "h5 = pd.HDFStore('..//files//allthefiles.h5')"
    ]
   },
   {
