course materials update

--- a/materials/PyTutorial_04_Visualization.ipynb
+++ b/materials/PyTutorial_04_Visualization.ipynb
@@ -863,7 +863,8 @@
    },
    "outputs": [],
    "source": [
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -891,8 +892,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "sns.set(style=\"white\")\n",
     "\n",
     "# Generate a random correlated bivariate dataset\n",
