--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -2205,13 +2205,150 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Higher-order functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "from operator import add\n",
+    "from numpy import exp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def multiexponential(n):\n",
+    "    \"\"\"Generate the sum of variable number of exponential decay functions\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def multiexp(fev=False, vardict=None):\n",
+    "        expr = ['A{}*exp(-x/x{}) + '.format(i,i) for i in range(n)]\n",
+    "        sumexpr = reduce(add, expr)[:-3]\n",
+    "        \n",
+    "        if fev == False and vardict is None:\n",
+    "            return sumexpr\n",
+    "        else:\n",
+    "            try:\n",
+    "                for v in vardict.keys():\n",
+    "                    exec(v + ' = vardict[v]')\n",
+    "                return eval(sumexpr)\n",
+    "            except:\n",
+    "                raise ValueError('Not all variables can be assigned!')\n",
+    "        \n",
+    "    return multiexp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiexp = multiexponential(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'A0*exp(-x/x0) + A1*exp(-x/x1)'"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiexp(fev=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.80967484,  1.80949388,  1.80931294, ...,  0.73597964,\n",
+       "        0.73590605,  0.73583246])"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "multiexp(fev=True, vardict={'A0':1,'x0':10,'A1':1,'x1':10,'x':np.arange(1,10,0.001)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class Line(object):\n",
+    "    \n",
+    "    def __init__(self, k, b):\n",
+    "        self.k, self.b = k,b\n",
+    "    \n",
+    "    def __call__(self, x):\n",
+    "        return self.k * x + self.b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = Line(3, 1)\n",
+    "y(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4.2 Object-oriented programming\n",
     "#### Create an Ellipse class for calculation of the basic properties of an ellipse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -2219,20 +2356,40 @@
    "source": [
     "from scipy.special import binom\n",
     "import numpy as np\n",
-    "from numpy import pi, sqrt\n",
-    "\n",
+    "from numpy import pi, sqrt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Ellipse(object):\n",
     "    \"\"\"A class for ellipses\n",
     "    \"\"\"\n",
     "    \n",
     "    def __init__(self, majoraxis, minoraxis):\n",
+    "        try:\n",
+    "            inputcheck = sum(list(map(lambda x: isinstance(x, (int, float)), \\\n",
+    "                                    [majoraxis, minoraxis])))\n",
+    "            assert inputcheck == 2\n",
+    "        except AssertionError:\n",
+    "            raise ValueError('The axes need to be integer or floating-point numbers.')\n",
+    "        \n",
     "        if majoraxis < minoraxis:\n",
     "            raise ValueError('Major axis is shorter than minor axis!')\n",
     "        else:\n",
     "            self.a = majoraxis\n",
     "            self.b = minoraxis\n",
-    "        \n",
+    "    \n",
     "    def __repr__(self):\n",
+    "        \"\"\"Official representation of the Ellipse object\n",
+    "        \"\"\"\n",
+    "        return '<{}.{}: a={}, b={}>'.format(self.__module__,\\\n",
+    "                self.__class__.__name__, self.a, self.b)\n",
+    "    \n",
+    "    def __str__(self):\n",
     "        return(\"               {}:\\n\\\n",
     "               a (major axis) = {}\\n\\\n",
     "               b (minor axis) = {}\\n\\\n",
@@ -2256,12 +2413,15 @@
     "    \n",
     "    @property\n",
     "    def eccentricity(self):\n",
+    "        \"\"\"Calculate the eccentricity of an ellipse\n",
+    "        (complete this on your own..)\n",
+    "        \"\"\"\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2430,7 @@
        "(4, 3, 37.69911184307752, 22.1034921607095)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2282,7 +2442,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Ellipse: a=4, b=3>"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "el"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -2313,8 +2493,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-7195f4eab396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mEllipse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmajoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-97b2df30fd00>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, majoraxis, minoraxis)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmajoraxis\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Major axis is shorter than minor axis!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-187-7195f4eab396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mEllipse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmajoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-183-0e6371cc0f13>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, majoraxis, minoraxis)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmajoraxis\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Major axis is shorter than minor axis!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: Major axis is shorter than minor axis!"
      ]
     }
@@ -2325,7 +2505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -2344,12 +2524,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create a Circle subclass from the Ellipse superclass"
+    "#### Create a \"Circle algebra\" from subclassing Ellipse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 188,
    "metadata": {
     "collapsed": true
    },
@@ -2362,12 +2542,25 @@
     "        self.r = radius\n",
     "    \n",
     "    def __add__(self, other):\n",
+    "        \"\"\"Addition of two Circle instances generate a larger\n",
+    "        Circle instance with combined radii\n",
+    "        \"\"\"\n",
     "        return Circle(radius=self.r + other.r)\n",
     "    \n",
     "    def __sub__(self, other):\n",
-    "        return Circle(radius=self.r - other.r)\n",
-    "        \n",
+    "        \"\"\"Subtraction between two Circle instances generate a\n",
+    "        Circle instance with differential radius\n",
+    "        \"\"\"\n",
+    "        if self.r > other.r:\n",
+    "            return Circle(radius=self.r - other.r)\n",
+    "        else:\n",
+    "            raise ValueError('Cannot subtract a large Circle from a small Circle.')\n",
+    "    \n",
     "    def __repr__(self):\n",
+    "        return '<{}.{}: r={}>'.format(self.__module__,\\\n",
+    "                self.__class__.__name__, self.r)\n",
+    "    \n",
+    "    def __str__(self):\n",
     "        return(\"        {}:\\n\\\n",
     "        r = {}\\n\\\n",
     "        area = {}\\n\\\n",
@@ -2382,7 +2575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -2391,7 +2584,7 @@
        "78.53981633974483"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -2412,7 +2605,7 @@
        "78.53981633974483"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,7 +2616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -2432,7 +2625,7 @@
        "31.41592653589793"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2443,7 +2636,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Circle: r=5>"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "circ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -2463,14 +2676,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'a', 'area', 'b', 'circumference', 'eccentricity', 'r']\n"
+      "['__add__', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__sub__', '__subclasshook__', '__weakref__', 'a', 'area', 'b', 'circumference', 'eccentricity', 'r']\n"
      ]
     }
    ],
@@ -2480,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -2489,7 +2702,7 @@
        "True"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2500,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -2509,7 +2722,7 @@
        "(__main__.Ellipse,)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2520,7 +2733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2742,7 @@
        "(__main__.Circle, __main__.Ellipse, object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2542,19 +2755,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "        Circle:\n",
-       "        r = 6\n",
-       "        area = 113.09733552923255\n",
-       "        circumference = 37.69911184307752"
+       "<__main__.Circle: r=6>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2565,19 +2775,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "        Circle:\n",
-       "        r = 10\n",
-       "        area = 314.1592653589793\n",
-       "        circumference = 62.83185307179586"
+       "<__main__.Circle: r=10>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
